# gmail-agent-using-mcp

./: .gitignore  README.md  main.py  pyproject.toml
src/simple_mcp/: __init__.py
